@@ -25,6 +25,7 @@ open Opnames
 open Cmo_format
 open Printf
 
+let print_banners = ref true
 let print_locations = ref true
 let print_reloc_info = ref false
 
@@ -422,7 +423,7 @@ let print_instr ic =
   else print_string names_of_instructions.(op);
   begin try
     let shape = List.assoc op op_shapes in
-    if shape <> Nothing then print_string " ";
+    if shape <> Nothing && shape <> Switch then print_string " ";
     match shape with
     | Uint -> print_int (inputu ic)
     | Sint -> print_int (inputs ic)
@@ -547,6 +548,7 @@ let dump_exe ic =
   print_code ic code_size
 
 let arg_list = [
+  "-nobanners", Arg.Clear print_banners, " : don't print banners";
   "-noloc", Arg.Clear print_locations, " : don't print source information";
   "-reloc", Arg.Set print_reloc_info, " : print relocation information";
   "-args", Arg.Expand Arg.read_arg,
@@ -566,14 +568,14 @@ let arg_fun filename =
   let ic = open_in_bin filename in
   if not !first_file then print_newline ();
   first_file := false;
-  printf "## start of ocaml dump of %S\n%!" filename;
+  if !print_banners then printf "## start of ocaml dump of %S\n%!" filename;
   begin try
           objfile := false; dump_exe ic
     with Bytesections.Bad_magic_number ->
       objfile := true; seek_in ic 0; dump_obj ic
   end;
   close_in ic;
-  printf "## end of ocaml dump of %S\n%!" filename
+  if !print_banners then printf "## end of ocaml dump of %S\n%!" filename
 
 let main() =
   Arg.parse_expand arg_list arg_fun arg_usage;
