@@ -125,6 +125,9 @@ Working version
   documentation.
   (Jules Aguillon, review by Florian Angeletti)
 
+- #11079: Add the -nobanners option to dumpobj.
+  (Sébastien Hinderer, review by Gabriel Scherer and Vincent Laviron)
+
 ### Manual and documentation:
 
 ### Compiler user-interface and warnings:
